# FarmUI-Admin

./: .coveragerc  .env.sample  .pre-commit-config.yaml  API_USAGE.md  CLAUDE.md  README.md  README_EN.md  index.html  justfile  middleware.ts  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  vite.config.ts
.github/workflows/: vercel-deploy.yml
.pre-commit/: hook.py
docs/: frontend_api_usage.md
src/: App.tsx  i18n.ts  index.css  types.ts
src/api/: mockDb.ts  services.ts
src/components/: LanguageSelector.css  LanguageSelector.tsx
src/config/: core.py
src/layouts/: AdminLayout.css  AdminLayout.tsx
src/pages/: Login.css  Login.tsx
src/pages/Analytics/: FleetAnalytics.tsx
src/pages/Farms/: FarmDetail.css  FarmDetail.tsx  FarmsList.css  FarmsList.tsx
src/pages/Farms/components/: AnalyticsTab.css  AnalyticsTab.tsx  AutomationEditorModal.css  AutomationEditorModal.tsx  AutomationsTab.css  AutomationsTab.tsx  (+4 more)
src/pages/Health/: SystemHealth.css  SystemHealth.tsx
src/pages/Notifications/: NotificationsManager.css  NotificationsManager.tsx
src/pages/Overview/: Overview.css  Overview.tsx
src/pages/Roles/: RolesList.tsx
src/pages/Users/: UsersList.css  UsersList.tsx
tests/greeting/: test_greeting_message.py
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: overview.md
website/docs/api-reference/: index.md
website/docs/deep-dives/: index.md
website/docs/guides/: api_usage.md  getting-started.md  index.md
website/src/css/: custom.css
