[project]
name = "aiseed_python_template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jinho Jang", email = "verycosy@kakao.com" }
]
dependencies = [
    "pydantic-settings>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "mypy>=1.11.0",
    "pre-commit>=3.7.1",
    "ipykernel>=6.29.5",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "rust-just>=1.46.0",
]
